--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "morgan": "^1.9.0",
+    "nodemon": "^1.17.5",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
